--- a/app/views/insurances/index.html.erb
+++ b/app/views/insurances/index.html.erb
@@ -19,26 +19,26 @@
 </div>
 
 <!-- # -->
-<table id="insurance-data" class="table table-bordered table-responsive">
+<table id="insurance-data" class="responsive-table">
   <thead>
     <tr>
-      <th><%= t :insurer %></th>
-      <th><%= t :insurance %> Document</th>
-      <th><%= t :starting_date %></th>
-      <th><%= t :expiration_date %></th>
-      <th><%= t :amount %></th>
-      <th class="td-actions">Actions</th>
+      <th scope="col"><%= t :insurer %></th>
+      <th scope="col"><%= t :attached_file %></th>
+      <th scope="col"><%= t :starting_date %></th>
+      <th scope="col"><%= t :expiration_date %></th>
+      <th scope="col"><%= t :amount %></th>
+      <th scope="col" class="td-actions">Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @insurances.each do |insurance| %>
       <tr>
-        <td><%= insurance.insurer.name %></td>
-        <td><%= insurance.expense.attached_file.file ? image_tag(insurance.expense.attached_file, width: 159, height: 220) : 'No Document' %></td>
-        <td><%= insurance.start_date %></td>
-        <td><%= insurance.expiration_date %></td>
-        <td><b><%= insurance.expense.amount %> DH</b></td>
+        <th scope="row"><%= insurance.insurer.name %></th>
+        <td data-title="<%= t :attached_file %>"><%= insurance.expense.attached_file.file ? image_tag(insurance.expense.attached_file, width: 159, height: 220) : 'No Document' %></td>
+        <td data-title="<%= t :starting_date %>"><%= insurance.start_date %></td>
+        <td data-title="<%= t :expiration_date %>"><%= insurance.expiration_date %></td>
+        <td data-title="<%= t :amount %>"><b><%= insurance.expense.amount %> DH</b></td>
         <td>
           <%= link_to insurance, :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'eye' %>
