--- a/app/views/break_causes/index.html.erb
+++ b/app/views/break_causes/index.html.erb
@@ -19,10 +19,10 @@
 </div>
 
 <!-- # -->
-<table id="break-cause-data" class="table table-bordered table-responsive">
+<table id="break-cause-data" class="responsive-table">
   <thead>
   <tr>
-    <th><%= t :name %></th>
+    <th scope="col"><%= t :name %></th>
     <th class="td-actions">Actions</th>
   </tr>
   </thead>
@@ -30,7 +30,7 @@
   <tbody>
   <% @break_causes.each do |break_cause| %>
       <tr>
-        <td><%= break_cause.name %></td>
+        <th scope="row"><%= break_cause.name %></th>
         <td>
           <%= link_to break_cause, :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'eye' %>
