--- a/app/views/damage_types/index.html.erb
+++ b/app/views/damage_types/index.html.erb
@@ -19,18 +19,18 @@
 </div>
 
 <!-- # -->
-<table id="damage-type-data" class="table table-bordered table-responsive">
+<table id="damage-type-data" class="responsive-table">
   <thead>
   <tr>
-    <th>Name</th>
-    <th class="td-actions">Actions</th>
+    <th scope="col"><%= t :name %></th>
+    <th scope="col" class="td-actions">Actions</th>
   </tr>
   </thead>
 
   <tbody>
   <% @damage_types.each do |damage_type| %>
       <tr>
-        <td><%= damage_type.name %></td>
+        <th scope="row"><%= damage_type.name %></th>
         <td>
           <%= link_to damage_type, :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'eye' %>
