--- a/app/views/expenses/sub-pages/_owner_takes.html.erb
+++ b/app/views/expenses/sub-pages/_owner_takes.html.erb
@@ -3,7 +3,7 @@
 
       <!-- # -->
       <h4 class="card-title">
-        <%= t 'owner_takes' %>
+        <%= t :owner_takes %>
         <b class="badge badge-info">
           <%= number_to_currency(OwnerTake.includes(:expense).pluck(:amount).sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
         </b>
@@ -13,26 +13,26 @@
       <% if !OwnerTake.all.empty? %>
 
         <!-- # -->
-        <table class="table table-bordered table-responsive">
+        <table class="responsive-table">
 
           <thead>
           <tr>
-            <th><%= t :owner %></th>
-            <th>Date</th>
-            <th><%= t :amount %></th>
+            <th scope="col"><%= t :owner %></th>
+            <th scope="col">Date</th>
+            <th scope="col"><%= t :amount %></th>
           </tr>
           </thead>
 
           <tbody>
           <% OwnerTake.all.limit(3).each do |owner_take| %>
               <tr>
-                <td>
+                <th scope="row">
                   <%= link_to owner_take do %>
                       <%= owner_take.owner.full_name %>
                   <% end %>
-                </td>
-                <td><%= owner_take.date %></td>
-                <td><b><%= owner_take.expense.amount %> DH</b></td>
+                </th>
+                <td data-title="Date"><%= owner_take.date %></td>
+                <td data-title="<%= t :amount %>"><b><%= owner_take.expense.amount %> DH</b></td>
               </tr>
           <% end %>
           </tbody>
