--- a/app/views/insurers/index.html.erb
+++ b/app/views/insurers/index.html.erb
@@ -39,7 +39,7 @@
         </td>
         <td data-title="<%= t :address %>"><%= insurer.address %></td>
         <td data-title="<%= t :phone %>">0<%= insurer.phone %></td>
-        <td>
+        <td class="btn-actions">
           <%= link_to insurer, :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'eye' %>
           <% end %>
