--- a/app/views/breaks/_form.html.erb
+++ b/app/views/breaks/_form.html.erb
@@ -49,9 +49,9 @@
       <div class="col-sm-10">
 
         <% if @break.start_date %>
-            <%= form.text_field :start_date, class: 'form-control', value: format_date(@break.start_date, "%Y-%m-%d", "%d/%m/%Y") %>
+            <%= form.date_field :start_date, class: 'form-control', value: format_date(@break.start_date, "%Y-%m-%d", "%d/%m/%Y") %>
         <% else %>
-            <%= form.text_field :start_date, class: 'form-control' %>
+              <%= form.text_field :start_date, class: 'form-control' %>
         <% end %>
 
         <% if !@break.errors.messages[:'start_date'].empty?  %>
