--- a/app/views/expenses/sub-pages/_breaks.html.erb
+++ b/app/views/expenses/sub-pages/_breaks.html.erb
@@ -15,6 +15,8 @@
         <table class="responsive-table">
           <thead>
           <tr>
+            <th scope="col"><%= t :starting_date %></th>
+            <th scope="col"><%= t :end_date %></th>
             <th scope="col">Cause</th>
             <th scope="col"><%= t :delay %></th>
             <th scope="col"><%= t :amount %></th>
@@ -26,9 +28,11 @@
               <tr>
                 <th scope="row">
                   <%= link_to b do %>
-                      <%= b.break_cause.name %>
+                      <%= b.start_date %>
                   <% end %>
                 </th>
+                <td data-title="<%= t :expiration_date %>"><%= b.end_date %></td>
+                <td data-title="row"><%= b.break_cause.name %></td>
                 <td data-title="<%= t :delay %>"><%= (b.end_date - b.start_date).to_i %> <%= t :days %></td>
                 <td data-title="<%= t :amount %>"><b><%= b.expense.amount %> DH</b></td>
               </tr>
