--- a/app/views/expenses/sub-pages/_owner_takes.html.erb
+++ b/app/views/expenses/sub-pages/_owner_takes.html.erb
@@ -17,8 +17,8 @@
 
           <thead>
           <tr>
-            <th scope="col"><%= t :owner %></th>
             <th scope="col">Date</th>
+            <th scope="col"><%= t :owner %></th>
             <th scope="col"><%= t :amount %></th>
           </tr>
           </thead>
@@ -28,10 +28,12 @@
               <tr>
                 <th scope="row">
                   <%= link_to owner_take do %>
-                      <%= owner_take.owner.full_name %>
+                      <%= owner_take.date %>
                   <% end %>
                 </th>
-                <td data-title="Date"><%= owner_take.date %></td>
+                <td data-title="Date">
+                  <%= owner_take.owner.full_name %>
+                </td>
                 <td data-title="<%= t :amount %>"><b><%= owner_take.expense.amount %> DH</b></td>
               </tr>
           <% end %>
